# github-data-file-fetcher

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: architecture.md  caching.md  collection-comparison.md  generic-api.md  index.md  pipeline.md
github_data_file_fetcher/: __init__.py  cli.py  db.py  db_test.py  generic_client.py  github.py  github_test.py  graphql.py  graphql_test.py  models.py  settings.py  utils_test.py
github_data_file_fetcher/fetch_file_content/: __init__.py  fetch_file_content.py  fetch_graphql.py
github_data_file_fetcher/fetch_file_history/: __init__.py  fetch_file_history.py  fetch_graphql.py
github_data_file_fetcher/fetch_file_paths/: __init__.py  fetch_file_paths.py  fetch_file_paths_test.py  fetch_files.py  fetch_files_test.py
github_data_file_fetcher/fetch_repo_metadata/: __init__.py  fetch_graphql.py  fetch_repo_metadata.py
tests/e2e/: conftest.py  test_fetch_file_content.py  test_fetch_file_history.py  test_fetch_file_paths.py  test_fetch_repo_metadata.py
tests/integration/: test_fetch_file_content.py  test_fetch_file_history.py  test_fetch_file_paths.py  test_fetch_repo_metadata.py  test_generic_api.py
