[project]
name = "github-data-file-fetcher"
version = "0.1.0"
description = "Fetch files and metadata from GitHub repositories"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-frontmatter>=1.1.0",
    "polars>=1.0.0",
    "PyGithub>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "cachetta>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-describe>=2.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
]
docs = [
    "mkdocs-material>=9.0.0",
]
notebooks = [
    "marimo>=0.10.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "altair>=5.0.0",
    "pyarrow>=15.0.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
github-fetch = "github_data_file_fetcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["github_data_file_fetcher", "tests"]
python_files = ["*_test.py", "test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B023",   # closure captures loop variable (intentional in our callback pattern)
    "SIM108", # prefer if-else for readability over ternary in some cases
]

[tool.ruff.lint.isort]
known-first-party = ["github_data_file_fetcher"]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-describe>=3.1.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
